lang/tests/compile_fail/seeds_raw_on_account.stderr
error: raw `seeds = [...]` is not allowed on program accounts. Add `#[seeds(...)]` to `Config` and use `Config::seeds(...)` instead.
  --> tests/compile_fail/seeds_raw_on_account.rs:14:9
   |
14 |     pub config: Account<Config>,
   |         ^^^^^^
